--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ header{
 }
 .logo{
   width: 100px;
+  
 }
 .logoimg{
   width: 80px;
@@ -34,6 +35,10 @@ header{
   flex: 1;
   display: flex;
   border-radius: 50%;  
+}
+.logoimg img{
+  width: 80px;
+  height: 80px;
 }
 .logonome{
   text-transform: uppercase;
