--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,140 +1,54 @@
-*{
-  margin:0;
-  padding:0;
-  box-sizing: border-box;
-}
-a{
-  text-decoration: none;
-  list-style: none;
-}
-
-.body{
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-  font-size: 13px;
-}
-/* inicio header */
-header{
-  height: 100px;
-  background-color: #000000;
-  color: #ffffff;
-}
-.header{
-  max-width:1140px; 
-  height: 100px;
-  display: flex;
-  margin: auto;
-  align-items: center;
-}
-.logo{
-  width: 100px;
-  
-}
-.logoimg{
-  width: 80px;
-  height: 80px;
-  background-color: #b28756;
-  flex: 1;
-  display: flex;
-  border-radius: 50%;  
-}
-.logoimg img{
-  width: 80px;
-  height: 80px;
-}
-.logonome{
-  text-transform: uppercase;
-  font-weight: 600;
-  font-size: 20px;
-}
-.menu{
-  flex:1;
-  display: flex;
-  justify-content: flex-end;
-}
-.menu ul,
-.menu li {
-  list-style: none;
-}
-.menu ul{
-  display: flex;
-}
-.menu li a{
-  color:#ffffff;
-  text-transform: uppercase;
-  font-weight: 600;
-  text-decoration: none;
-  padding-left: 10px;
-  padding-right: 10px;
-  height: 100px;
-  display:flex;
-  align-items: center;
-  border-bottom: 10px solid #000000;
-
-}
-.menu li a:hover{
-  border-bottom: 6px solid #b28756;
-  color:#cccccc;
-}
-.menu .active a{
-  color:#b28756;
-}
-/* main */
-.banner {
-  height: calc(100vh - 100px);
-  background-color: #333333;
- /* background-image:url('../images/bg.jpg');*/
-  background-size: cover;
-  background-position: center;
-  overflow: hidden;
-}
-.banner .sliders{
-  width: 1000vw;
+.foto-perfil {
   height: 100%;
-}
-.banner .slide{
-  width: 100vw;
-  height: 100%;
-  display: inline-block;
-  background-color: rgba(0,0,0,0.6);
-}
-.banner .slidearea{
-  display: flex;
-  height: 100%;
-  align-items: center;
-  color: #ffffff;
-  justify-content: center;
-}
-.socialMedia{
-  height: 50px;
-  width: 50px;
+  width: auto;
+  max-width: 100%;
   border-radius: 50%;
-  margin-left: 12px;
-  margin-bottom: 200px;
-  display: inline-block;
 }
-.nome{
-  display: flex;
-  justify-content: center;
-  margin-top: 100px;
-  font-size: 50px;
-  color: #c5c0c0;
-  font-family: 'Fredoka+One';
+.corPrimaria {
+  background-color:#18bc9c;
 }
-.dev{
-  margin-top: 50px;
-  font-family: 'Fredoka+One';
-  display: flex;
-  justify-content: center;
-  color: #c5c0c0;
-  font-size:17px;
+.corSecundaria {
+  background-color:#2c3e50;
 }
-.slidearea ul {
-  list-style: none;
-  display: flex;
-  align-content: center;
-  text-align: center;
+p {
+  font-family:Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color:black !important;
+}
+.icones {
+  padding-left:5px;
 }
 
-.slidearea ul li a {
-  outline: none;
+.titulosBrancos {
+  text-decoration: underline;
+  text-underline-position: below;
+  padding-bottom: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color:white;
 }
+
+.titulosVerdes {
+  text-decoration: underline;
+  text-underline-position: below;
+  padding-bottom: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color:#18bc9c;
+}
+
+.textoBranco {
+  color:white !important;
+}
+.jumbotron {
+  margin-bottom: 0px;
+}
+
+.textoFooter {
+  margin:0px;
+  padding-top:15px;
+  padding-bottom:15px;
+}
+html {
+  scroll-behavior: smooth;
+}
+
