--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,51 +4,55 @@
   max-width: 100%;
   border-radius: 50%;
 }
+
 .corPrimaria {
-  background-color:#18bc9c;
+  background-color: #333333;
 }
+
 .corSecundaria {
-  background-color:#2c3e50;
+  background-color: #2c3e50;
 }
+
 p {
-  font-family:Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color:black !important;
+  font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: black !important;
+  font-size: 13px;
 }
+
 .icones {
-  padding-left:5px;
+  padding-left: 5px;
 }
 
 .titulosBrancos {
-  text-decoration: underline;
   text-underline-position: below;
   padding-bottom: 20px;
   text-transform: uppercase;
-  font-weight: 700;
-  color:white;
+  font-weight: 500;
+  color: white;
 }
 
 .titulosVerdes {
-  text-decoration: underline;
   text-underline-position: below;
-  padding-bottom: 20px;
+  padding-bottom: 16px;
   text-transform: uppercase;
-  font-weight: 700;
-  color:#18bc9c;
+  font-weight: 500;
+  color: #18bc9c;
 }
 
 .textoBranco {
-  color:white !important;
+  color: white !important;
 }
+
 .jumbotron {
   margin-bottom: 0px;
 }
 
 .textoFooter {
-  margin:0px;
-  padding-top:15px;
-  padding-bottom:15px;
+  margin: 0px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
+
 html {
   scroll-behavior: smooth;
 }
-
