--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ p {
   padding-bottom: 16px;
   text-transform: uppercase;
   font-weight: 500;
-  color: #18bc9c;
+  color: #2f3534;
 }
 
 .textoBranco {
