Alteração sobre mim

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ p {
   color: white;
 }
 
-.titulosVerdes {
+.titulosPretos {
   text-underline-position: below;
   padding-bottom: 16px;
   text-transform: uppercase;
